Fixing spacing after project sliders to match figma

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_front-page.scss
@@ -137,10 +137,6 @@
 		padding-top: 100px;
 		padding-bottom: 100px;
 	}
-	@media (min-width: 1200px) {
-		padding-top: 140px;
-		padding-bottom: 140px;
-	}
 }
 
 .home-projects-intro {
